[package]
name = "titan-v3-venue-template"
version = "0.1.0"
edition = "2021"
publish = false

# Anchor's macros reference cfgs (e.g. `anchor-debug`) that aren't declared as
# Cargo features, which trips Rust's `unexpected_cfgs` check-cfg lint. Silence it
# so test output stays clean.
[lints.rust]
unexpected_cfgs = "allow"

[lib]
crate-type = ["cdylib", "lib"]
name = "titan_v3_venue_template"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
swap-logging = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

[dev-dependencies]
borsh = "0.10.4"
env_logger = "0.11.3"
# `solana-sdk` pulls `solana-secp256r1-program -> openssl`; the `vendored`
# feature builds a static OpenSSL from source so the route-test host binaries
# link on machines without a matching system `libssl` (e.g. an arm64 Mac with
# only an x86_64 Homebrew). Test-only — never compiled into the on-chain program.
openssl = { version = "0.10", features = ["vendored"] }
litesvm = "^0.6.1"
log = "0.4.28"
solana-account = "2.2.1"
solana-client = "2.2.1"
solana-compute-budget = "2.2.1"
solana-instruction = "2.2.1"
solana-program = "2.2.1"
solana-program-pack = "2.2.1"
solana-pubkey = "2.2.1"
solana-sdk = "2.2.1"
solana-sysvar = "2.2.1"
solana-transaction = "2.2.1"
spl-associated-token-account = "6"
spl-token = { version = "7", features = ["no-entrypoint"] }
spl-token-2022 = { version = "^9", features = ["no-entrypoint"] }
titan-integration-template = { path = "../../.." }
tokio = { version = "1.38.0", features = ["full"] }
